<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="soundEnabled"
        android:summaryOff="@string/soundEnabled_summaryOff"
        android:summaryOn="@string/soundEnabled_summaryOn"
        android:title="@string/soundEnabled_title" />

    <ListPreference
        android:key="waitToHideCardsPref"
        android:title="@string/waitToHideCardsPref_title"
        android:dialogTitle="@string/waitToHideCardsPref_dialogTitle"
        android:entries="@array/waitToHideCardsPref_entries"
        android:entryValues="@array/waitToHideCardsPref_entryValues"
        android:defaultValue="@string/waitToHideCardsPref_defaultValue" />
    
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="resetAndPlayAgainWhenClicked"
        android:summaryOff="@string/resetAndPlayAgainWhenClicked_summaryOff"
        android:summaryOn="@string/resetAndPlayAgainWhenClicked_summaryOn"
        android:title="@string/resetAndPlayAgainWhenClicked_title" />
    
</PreferenceScreen>